--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^15.0.0"
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security"
   }
 }
