--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "electron .",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "pack": "npx electron-packager . PsicoAnalise --icon=assets/buildIcon.png"
   },
   "author": "Diogo Menezes",
   "license": "ISC",
   "devDependencies": {
     "electron": "^15.0.0",
-    "electron-builder": "^22.13.1"
+    "electron-packager": "^15.4.0"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -24,18 +23,24 @@
     "mac": {
       "category": "your.app.category.type"
     },
-    "directories":{
-      "output":"dist"
+    "directories": {
+      "output": "dist"
     },
-    "productName":"PsicoAnalise",
-    "target":"nsis",
-    "icon":"assets/buildicon.png",
-    "nsis":{
-      "allowToChangeInstallationDirectory":true,
-      "installerIcon":"assets/buildicon.png",
-      "runAfterFinish":true,
-      "createDesktopShortcut":true,
-      "shortcutName":"PsicoAnalise"
-    }
+    "productName": "PsicoAnalise",
+    "target": "nsis",
+    "icon": "assets/buildicon.png",
+    "nsis": {
+      "allowToChangeInstallationDirectory": true,
+      "installerIcon": "assets/buildicon.png",
+      "runAfterFinish": true,
+      "createDesktopShortcut": true,
+      "shortcutName": "PsicoAnalise"
+    },
+    "extraFiles": [
+      {
+        "from": "assets/data",
+        "to": "data"
+      }
+    ]
   }
 }
