--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "electron .",
     "pack": "npx electron-packager . PsicoAnalise --icon=assets/buildIcon.png --out=temp",
-    "buildwin":"node ./temp/installerGen.js"
+    "buildwin":"node ./temp/installerGen.js",
+    "testbuildwin": "node ./script/installerGen.js"
   },
   "author": "Diogo Menezes",
   "license": "ISC",
